--- a/仿购物车/index.html
+++ b/仿购物车/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>购物车</title>
-		<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+		<script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 		<script src="js/myjs.js" type="text/javascript" charset="utf-8"></script>
 		<link rel="stylesheet" type="text/css" href="css/mycss.css"/>
 	</head>
