--- a/Tab选项卡组件/index.html
+++ b/Tab选项卡组件/index.html
@@ -5,7 +5,7 @@
 		<title>Tab选项卡组件</title>
 		<link rel="stylesheet" type="text/css" href="css/ui-tab.css"/>
 		<link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.css"/>
-		<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+		<script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 		<script src="js/tab.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
