--- a/搜索框/mySearch.html
+++ b/搜索框/mySearch.html
@@ -29,7 +29,7 @@
 		</ul>
 		
 		
-		<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+		<script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 		<script type="text/javascript">
 			$(function(){
 				$("#searchInput").bind("keyup",function(){
