--- a/列车时刻表/index.html
+++ b/列车时刻表/index.html
@@ -85,7 +85,7 @@
 	</div>
 	
 	
-	<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+	<script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 	<script src="jquery.mobile-1.4.5/jquery.mobile-1.4.5.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/train.js" type="text/javascript" charset="utf-8"></script>
 	
