--- a/搜索框/search4TB.html
+++ b/搜索框/search4TB.html
@@ -39,7 +39,7 @@
 						var temp =  $(items[0]).html()
 						$(items[0]).html($(items[1]).html())
 						$(items[1]).html(temp)
-						
+						$(items[1]).parent().parent().height(34)
 					})
 //				$(items[1]).click(function(){
 //						$(items[0]).parent().addClass('select')
