--- a/搜索框/search4TBjs.html
+++ b/搜索框/search4TBjs.html
@@ -28,7 +28,7 @@
 				
 			</div>
 		</div>
-		<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+		<script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 		<script type="text/javascript">
 			$(function(){
 				var searchList = $('#search-list');
