fix some bugs in search4TBjs

--- a/搜索框/search4TBjs.html
+++ b/搜索框/search4TBjs.html
@@ -53,6 +53,11 @@
 					var temp = $(items[1]).html();
 					$(items[1]).html($(items[0]).html())
 					$(items[0]).html(temp);
+					
+						searchList.height(34)
+//					}else{
+//						searchList.height(68)
+//					}
 				})
 				
 			})
