--- a/webComponent/window.html
+++ b/webComponent/window.html
@@ -29,7 +29,7 @@
 				letter-spacing: 3px;
 				border-radius: 3px;
 				cursor: pointer;
-				box-shadow: 0 0 20px rgba(0,0,0,0.3);
+				box-shadow: 0 10px 50px rgba(0,0,0,0.4);
 				margin-bottom: 10px;
 				
 			}
