--- a/webComponent/window.html
+++ b/webComponent/window.html
@@ -36,6 +36,19 @@
 			.a:hover{
 				background: #64e5ba;
 			}
+			.info{
+				margin-left:-70px ;
+				margin-top: 50px;
+			}
+			.info a{
+				text-decoration: none;
+				color: #DDDDDD;
+				font-weight: bolder;
+			}
+			.info a:hover{
+				text-decoration: underline;
+				color: #fff
+			}
 		</style>
 	</head>
 	<body>
@@ -44,8 +57,17 @@
 			<div id="confirm" class="a">confirm</div>
 			<div id="prompt" class="a">prompt</div>
 			<div id="common" class="a">common</div>
+			<center class="info">
+				<a href="https://github.com/niuyi1017/imooc/tree/master/webComponent">点击查看源码</a>
+				<a href="https://niuyi1017.github.io/">回到博客主页</a>
+				<a href="https://github.com/niuyi1017">查看我的其他项目</a>
+		</center>
 		</div>
-		
+		<!--<center class="info">
+			<a href="#">点击查看源码</a>
+			<a href="#">回到博客主页</a>
+			<a href="#">查看我的其他项目</a>
+		</center>-->
 		<script src="https://cdn.bootcss.com/require.js/2.3.5/require.js" data-main = "js/window-main"></script>
 	</body>
 </html>
