--- a/CSS3实现图片阴影/index.html
+++ b/CSS3实现图片阴影/index.html
@@ -10,9 +10,9 @@
 		<h1>Shadow Effect</h1>
 	</div>
 	<ul class="box">
-		<li><img src="http://pgdwgiv7s.bkt.clouddn.com/%E5%9B%BE%E7%89%87%E9%98%B4%E5%BD%B1/005vSEuQly1fvtogm5jegj30hg0ax75r.jpg"/></li>
-		<li><img src="http://pgdwgiv7s.bkt.clouddn.com/%E5%9B%BE%E7%89%87%E9%98%B4%E5%BD%B1/005vSEuQly1fvtogmng91j30q40con1l.jpg"/></li>
-		<li><img src="http://pgdwgiv7s.bkt.clouddn.com/%E5%9B%BE%E7%89%87%E9%98%B4%E5%BD%B1/005vSEuQly1fvmogigs2nj30zk0hswk6.jpg"/></li>
+		<li><img src="imooc.niuy.xyz/%E5%9B%BE%E7%89%87%E9%98%B4%E5%BD%B1/005vSEuQly1fvtogm5jegj30hg0ax75r.jpg"/></li>
+		<li><img src="imooc.niuy.xyz/%E5%9B%BE%E7%89%87%E9%98%B4%E5%BD%B1/005vSEuQly1fvtogmng91j30q40con1l.jpg"/></li>
+		<li><img src="imooc.niuy.xyz/%E5%9B%BE%E7%89%87%E9%98%B4%E5%BD%B1/005vSEuQly1fvmogigs2nj30zk0hswk6.jpg"/></li>
 	</ul>
 	</body>
 </html>
