--- a/CSS3照片墙/index.html
+++ b/CSS3照片墙/index.html
@@ -13,15 +13,15 @@
 	</div>
 	
 	<div class="wrap">
-		<img class="effect pic1" src="http://pgdwgiv7s.bkt.clouddn.com/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjyhh57j21kw1bob29.jpg"/>
-		<img class="effect pic2" src="http://pgdwgiv7s.bkt.clouddn.com/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjxy8e9j21kw0w0kfb.jpg"/>
-		<img class="effect pic3" src="http://pgdwgiv7s.bkt.clouddn.com/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjyiwr5j21kw0w0dyl.jpg"/>
-		<img class="effect pic4" src="http://pgdwgiv7s.bkt.clouddn.com/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjxrz3oj21hc0u07rf.jpg"/>
-		<img class="effect pic5" src="http://pgdwgiv7s.bkt.clouddn.com/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjuo13pj21401z4e81.jpg"/>
-		<img class="effect pic6" src="http://pgdwgiv7s.bkt.clouddn.com/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3ck09u04j21kw0w07wh.jpg"/>
-		<img class="effect pic7" src="http://pgdwgiv7s.bkt.clouddn.com/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjv6fsqj21401z4qv5.jpg"/>
-		<img class="effect pic8" src="http://pgdwgiv7s.bkt.clouddn.com/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3ck0h513j21jk0v9kjl.jpg"/>
-		<img class="effect pic9" src="http://pgdwgiv7s.bkt.clouddn.com/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjx2jp0j21401z4npd.jpg"/>
+		<img class="effect pic1" src="imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjyhh57j21kw1bob29.jpg"/>
+		<img class="effect pic2" src="imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjxy8e9j21kw0w0kfb.jpg"/>
+		<img class="effect pic3" src="imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjyiwr5j21kw0w0dyl.jpg"/>
+		<img class="effect pic4" src="imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjxrz3oj21hc0u07rf.jpg"/>
+		<img class="effect pic5" src="imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjuo13pj21401z4e81.jpg"/>
+		<img class="effect pic6" src="imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3ck09u04j21kw0w07wh.jpg"/>
+		<img class="effect pic7" src="imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjv6fsqj21401z4qv5.jpg"/>
+		<img class="effect pic8" src="imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3ck0h513j21jk0v9kjl.jpg"/>
+		<img class="effect pic9" src="imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjx2jp0j21401z4npd.jpg"/>
 		
 	</div>	
 	<!--<div class="player">
