--- a/rem/H5/src/index.html
+++ b/rem/H5/src/index.html
@@ -26,14 +26,14 @@
       </ul>
     </div>
     <div class="banner-content">
-      <img src="http://pgdwgiv7s.bkt.clouddn.com/rem/timg.jpg" alt="" class="banner">
+      <img src="imooc.niuy.xyz/rem/timg.jpg" alt="" class="banner">
       <p class="banner-title">2017网易时尚盛典</p>
     </div>
     <div class="news-content">
       <ul>
         <li class="news-item">
           <div class="item-inner">
-            <img src="http://pgdwgiv7s.bkt.clouddn.com/rem/news.jpg" class="news-img" />
+            <img src="imooc.niuy.xyz/rem/news.jpg" class="news-img" />
             <p class="news-title">rem 网页适配实战 网易新闻H5页面开发</p>
             <span class="time">1小时前</span>
             <span class="num">999</span>
@@ -42,7 +42,7 @@
         </li>
         <li class="news-item">
           <div class="item-inner">
-            <img src="http://pgdwgiv7s.bkt.clouddn.com/rem/news.jpg" class="news-img" />
+            <img src="imooc.niuy.xyz/rem/news.jpg" class="news-img" />
             <p class="news-title">rem 网页适配实战 网易新闻H5页面开发</p>
             <span class="time">1小时前</span>
             <span class="num">999</span>
@@ -51,7 +51,7 @@
         </li>
         <li class="news-item">
           <div class="item-inner">
-            <img src="http://pgdwgiv7s.bkt.clouddn.com/rem/news.jpg" class="news-img" />
+            <img src="imooc.niuy.xyz/rem/news.jpg" class="news-img" />
             <p class="news-title">rem 网页适配实战 网易新闻H5页面开发</p>
             <span class="time">1小时前</span>
             <span class="num">999</span>
@@ -60,7 +60,7 @@
         </li>
         <li class="news-item">
           <div class="item-inner">
-            <img src="http://pgdwgiv7s.bkt.clouddn.com/rem/news.jpg" class="news-img" />
+            <img src="imooc.niuy.xyz/rem/news.jpg" class="news-img" />
             <p class="news-title">rem 网页适配实战 网易新闻H5页面开发</p>
             <span class="time">1小时前</span>
             <span class="num">999</span>
@@ -69,7 +69,7 @@
         </li>
         <li class="news-item">
           <div class="item-inner">
-            <img src="http://pgdwgiv7s.bkt.clouddn.com/rem/news.jpg" class="news-img" />
+            <img src="imooc.niuy.xyz/rem/news.jpg" class="news-img" />
             <p class="news-title">rem 网页适配实战 网易新闻H5页面开发</p>
             <span class="time">1小时前</span>
             <span class="num">999</span>
@@ -78,7 +78,7 @@
         </li>
         <li class="news-item">
           <div class="item-inner">
-            <img src="http://pgdwgiv7s.bkt.clouddn.com/rem/news.jpg" class="news-img" />
+            <img src="imooc.niuy.xyz/rem/news.jpg" class="news-img" />
             <p class="news-title">rem 网页适配实战 网易新闻H5页面开发</p>
             <span class="time">1小时前</span>
             <span class="num">999</span>
@@ -87,7 +87,7 @@
         </li>
         <li class="news-item">
           <div class="item-inner">
-            <img src="http://pgdwgiv7s.bkt.clouddn.com/rem/news.jpg" class="news-img" />
+            <img src="imooc.niuy.xyz/rem/news.jpg" class="news-img" />
             <p class="news-title">rem 网页适配实战 网易新闻H5页面开发</p>
             <span class="time">1小时前</span>
             <span class="num">999</span>
