--- a/瀑布流布局/瀑布流JQ.html
+++ b/瀑布流布局/瀑布流JQ.html
@@ -11,12 +11,12 @@
 		<div class="main" id="main">
 			<div class="box">
 				<div class="pic">
-					<img src="imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjuo13pj21401z4e81.jpg"/>
+					<img src="http://imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjuo13pj21401z4e81.jpg"/>
 				</div>
 			</div>
 			<div class="box">
 				<div class="pic">
-					<img src="imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjv6fsqj21401z4qv5.jpg"/>
+					<img src="http://imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjv6fsqj21401z4qv5.jpg"/>
 				</div>
 			</div>
 			<div class="box">
