cdn add http://

--- a/Tab选项卡组件/index.html
+++ b/Tab选项卡组件/index.html
@@ -22,10 +22,10 @@
 			<li><a href="#"><i class="fa fa-podcast"></i></a></li>
 		</ul>
 		<div class="ui-tab-content-wrap">
-			<div class="ui-tab-content-item current"><img src="imooc.niuy.xyz/tab%E7%BB%84%E4%BB%B6/1.jpg"/></div>
-			<div class="ui-tab-content-item"><img src="imooc.niuy.xyz/tab%E7%BB%84%E4%BB%B6/2.jpg"/></div>
-			<div class="ui-tab-content-item"><img src="imooc.niuy.xyz/tab%E7%BB%84%E4%BB%B6/3.jpg"/></div>
-			<div class="ui-tab-content-item"><img src="imooc.niuy.xyz/tab%E7%BB%84%E4%BB%B6/4.jpg"/></div>
+			<div class="ui-tab-content-item current"><img src="http://imooc.niuy.xyz/tab%E7%BB%84%E4%BB%B6/1.jpg"/></div>
+			<div class="ui-tab-content-item"><img src="http://imooc.niuy.xyz/tab%E7%BB%84%E4%BB%B6/2.jpg"/></div>
+			<div class="ui-tab-content-item"><img src="http://imooc.niuy.xyz/tab%E7%BB%84%E4%BB%B6/3.jpg"/></div>
+			<div class="ui-tab-content-item"><img src="http://imooc.niuy.xyz/tab%E7%BB%84%E4%BB%B6/4.jpg"/></div>
 		</div>
 	</div>
 	
@@ -42,10 +42,10 @@
 			<li><a href="#"><i class="fa fa-podcast"></i></a></li>
 		</ul>
 		<div class="ui-tab-content-wrap">
-			<div class="ui-tab-content-item current"><img src="imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjxrz3oj21hc0u07rf.jpg"/></div>
-			<div class="ui-tab-content-item"><img src="imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjxy8e9j21kw0w0kfb.jpg"/></div>
-			<div class="ui-tab-content-item"><img src="imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjyiwr5j21kw0w0dyl.jpg"/></div>
-			<div class="ui-tab-content-item"><img src="imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3ck0h513j21jk0v9kjl.jpg"/></div>
+			<div class="ui-tab-content-item current"><img src="http://imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjxrz3oj21hc0u07rf.jpg"/></div>
+			<div class="ui-tab-content-item"><img src="http://imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjxy8e9j21kw0w0kfb.jpg"/></div>
+			<div class="ui-tab-content-item"><img src="http://imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjyiwr5j21kw0w0dyl.jpg"/></div>
+			<div class="ui-tab-content-item"><img src="http://imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3ck0h513j21jk0v9kjl.jpg"/></div>
 		</div>
 	</div>
 	<script type="text/javascript">
