--- a/webComponent/window.html
+++ b/webComponent/window.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="css/window.css"/>
 		<style type="text/css">
 			body{
-				background: url(imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjxrz3oj21hc0u07rf.jpg);
+				background: url(http://imooc.niuy.xyz/%E7%85%A7%E7%89%87%E5%A2%99/blog648ac377gy1fw3cjxrz3oj21hc0u07rf.jpg);
 			}
 			.box{
 				position: absolute;
